fix background to avoid white stuff behind letters in desktop

--- a/themes/datarightsngo/assets/css/style.scss
+++ b/themes/datarightsngo/assets/css/style.scss
@@ -251,6 +251,7 @@ main.content .page-header {
     body.cover.cover-teufelsberg & {
         background-color: #da7a99;
         background-image: url(/assets/teufelsbergpinkbackground.jpg);
+        background-position: bottom;
         text-shadow: rgba(0,0,0,0.35) 0px 0px 1px, rgba(0,0,0,0.35) 1px 0 10px;
         .title {
             border-color: #da7a99;
